[package]
name = "filemover-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.20", features = [ "derive" ] }
futures-util = "0.3.32"
reqwest = { version = "0.12", features = [ "multipart", "stream", "rustls-tls" ] }
tokio = { version = "1.52.3", features = [ "full" ] }
