[package]
name = "filemover-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11.3"
bip39 = { version = "2.2.2", features = [ "rand" ] }
clap = { version = "4.5.20", features = [ "derive" ] }
futures-util = "0.3.32"
indicatif = "0.17"
inquire = "0.7"
qrcode = "0.14"
reqwest = { version = "0.12", features = [ "multipart", "stream", "rustls-tls" ] }
tokio = { version = "1.52.3", features = [ "full" ] }
tokio-util = { version = "0.7", features = [ "io" ] }
