[package]
name = "capsule-cli"
version = "0.3"
edition = "2024"

[[bin]]
name = "capsule"
path = "src/main.rs"

[dependencies]
age = "0.11.3"
bip39 = { version = "2.2.2", features = [ "rand" ] }
clap = { version = "4.5.20", features = [ "derive" ] }
clap_complete = "4"
dirs = "6.0.0"
futures-util = "0.3.32"
indicatif = "0.17"
inquire = "0.7"
qrcode = "0.14"
reqwest = { version = "0.12", default-features = false, features = [ "multipart", "stream", "rustls-tls", "json" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "1.52.3", features = [ "full" ] }
tokio-util = { version = "0.7", features = [ "io" ] }
crossterm = "0.28"
